<resources>

    <!-- MAIN LABELS -->
    <string name="app_name">Bahdulator</string>
    <string name="app_name_caps">BAHDULATOR</string>
    <string name="label_dec">DEC</string>
    <string name="label_hex">HEX</string>
    <string name="label_bin">BIN</string>
    <string name="label_asc">ASC</string>
    <string name="label_pro">PRO</string>

    <!-- PROTOCOL MENU -->
    <string name="dns_opcodes">dns.opcodes</string>
    <string name="dns_rcodes">dns.rcodes</string>
    <string name="dns_rrtypes">dns.rr_types</string>
    <string name="dns_header_offsets">dns.header_offsets</string>
    <string name="eth_types">eth.types</string>
    <string name="eth_header_offsets">eth.header_offsets</string>
    <string name="icmp_types">icmp.types</string>
    <string name="icmp_header_offsets">icmp.header_offsets</string>
    <string name="icmpv6_types">icmpv6.types</string>
    <string name="ipv4_options">ipv4.options</string>
    <string name="ipv4_protocols">ipv4.protocols</string>
    <string name="ipv4_header_offsets">ipv4.header_offsets</string>
    <string name="ipv6_extension_headers">ipv6.extension_headers</string>
    <string name="ipv6_header_offsets">ipv6.header_offsets</string>
    <string name="tcp_system_ports">tcp.system_ports</string>
    <string name="tcp_header_offsets">tcp.header_offsets</string>
    <string name="tcp_option_kinds">tcp.option_kinds</string>
    <string name="udp_system_ports">udp.system_ports</string>
    <string name="udp_header_offsets">udp.header_offsets</string>
    <string name="arp_header_offsets">arp.header_offsets</string>
    <string name="nothing_found">-</string>
    <string name="hint_select_pro">Select a protocol field</string>
    <string name="nothing_entered">Enter a value above</string>

    <!-- ABOUT FRAGMENT -->
    <string name="label_version">VERSION |</string>
    <string name="label_author">AUTHOR |</string>
    <string name="label_github">GITHUB |</string>
    <string name="label_date">DATE |</string>
    <string name="version">1.1</string>
    <string name="author">Samuel J. Brookes</string>
    <string name="github">sjb-ch1mp</string>
    <string name="date">Dec 2019</string>

</resources>
