<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/labelGreen"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/app_name_caps"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:fontFamily="@font/aldrich" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/label_version"
            android:textAlignment="textEnd"
            android:textColor="@color/labelGreen"
            android:textSize="12sp"
            android:textStyle="bold"
            app:fontFamily="@font/aldrich" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/version"
            android:textSize="12sp"
            app:fontFamily="@font/aldrich" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/label_author"
            android:textAlignment="textEnd"
            android:textColor="@color/labelGreen"
            android:textSize="12sp"
            android:textStyle="bold"
            app:fontFamily="@font/aldrich" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/author"
            android:textSize="12sp"
            app:fontFamily="@font/aldrich" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/label_github"
            android:textAlignment="textEnd"
            android:textColor="@color/labelGreen"
            android:textSize="12sp"
            android:textStyle="bold"
            app:fontFamily="@font/aldrich" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/github"
            android:textSize="12sp"
            app:fontFamily="@font/aldrich" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/label_date"
            android:textAlignment="textEnd"
            android:textColor="@color/labelGreen"
            android:textSize="12sp"
            android:textStyle="bold"
            app:fontFamily="@font/aldrich" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/date"
            android:textSize="12sp"
            app:fontFamily="@font/aldrich" />
    </LinearLayout>
</LinearLayout>
